--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clone Youtube</title>
     <link rel="stylesheet" href="./styles/index.css" />
-    <link rel="shortcut icon" href="./assets/FavIcon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/FavIcon.png" type="image/x-icon" />
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img
           src="./assets/FavIcon.png"
           width="30"
@@ -36,12 +36,16 @@
           Pesquisar
         </button>
       </form>
-      <img
-        src="./assets/icone de login.jpeg"
-        width="50"
-        height="auto"
-        alt="..."
-        class="rounded-circle"/>
+      <a class="navbar-brand" href="./login.html">
+        <img
+            src="./assets/icone de login.jpeg"
+            width="50"
+            height="auto"
+            alt="..."
+            class="rounded-circle"
+        />
+        Login
+     </a>
     </nav>
     <main>
         <div class="container">
@@ -148,6 +152,8 @@
     <footer>
         Desenvolvido por Renata
     </footer>
+
+    <script src="./scripts/app.js"></script>
     <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
